# PonyEngine

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  PonyEngine.sln  README.md  ThirdParty.md
Engine/Application.Ext/: CMakeLists.txt  README.md
Engine/Application.Ext/CMake/: Module.cmake
Engine/Application.Ext/Source/: Main-FlowState.cppm  Main-IApplicationContext.cppm  Main-ILoggerModuleContext.cppm  Main-IModule.cppm  Main-IModuleContext.cppm  Main-IService.cppm  Main-IServiceInterfaceAdder.cppm  Main-ITickableServiceAdder.cppm  Main-ServiceHandle.cppm
Engine/Application.Ext/Source/Public/: Application.Ext-FlowState.cppm  Application.Ext-IApplicationContext.cppm  Application.Ext-ILoggerContext.cppm  Application.Ext-ILoggerModuleContext.cppm  Application.Ext-IModule.cppm  Application.Ext-IModuleContext.cppm  Application.Ext-IService.cppm  Application.Ext-IServiceInterfaceAdder.cppm  Application.Ext-IServiceModuleContext.cppm  Application.Ext-ITickableService.cppm  Application.Ext-ITickableServiceAdder.cppm  Application.Ext-LoggerHandle.cppm  Application.Ext-ModuleDataHandle.cppm  Application.Ext-ServiceData.cppm  Application.Ext-ServiceHandle.cppm  Application.Ext-Windows.IApplicationContext.cppm  Application.Ext.cppm  Main-IApplicationContext.cppm  Main-ILoggerContext.cppm  Main-ILoggerModuleContext.cppm  Main-IModule.cppm  Main-IModuleContext.cppm  Main-IService.cppm  Main-IServiceInterfaceAdder.cppm  Main-IServiceModuleContext.cppm  Main-ITickableService.cppm  Main-ITickableServiceAdder.cppm  Main.cppm
Engine/Application.Extension/: CMakeLists.txt
Engine/Application.Extension/CMake/: Module.cmake
Engine/Application.Extension/Source/Public/: Application.Extension-ILoggerModuleContext.cppm  Application.Extension-IModule.cppm  Application.Extension-IModuleContext.cppm  Application.Extension-IService.cppm  Application.Extension-ModuleDataHandle.cppm  Application.Extension-ServiceHandle.cppm  Application.Extension.cppm
Engine/Application.Impl/: CMakeLists.txt  README.md
Engine/Application.Impl/Data/Windows/: Resource.rc
Engine/Application.Impl/Source/: Main-ConsoleUtility.cppm  Main-DefaultLogger.cppm  Main-FlowManager.cppm  Main-IdentityUtility.cppm  Main-InterfaceContainer.cppm  Main-PathUtility.cppm  Main-ServiceContainer.cppm  Main-ServiceManager.cppm  Main.Windows.cpp  Main.cpp  Main.cppm
Engine/Application.Impl/Source/Private/: Application.Impl-App.cppm  Application.Impl-AppDataManager.cppm  Application.Impl-Console.cppm  Application.Impl-DefaultLogger.cppm  Application.Impl-ExitCodes.cppm  Application.Impl-InterfaceContainer.cppm  Application.Impl-LoggerManager.cppm  Application.Impl-ModuleManager.cppm  Application.Impl-Name.cppm  Application.Impl-Path.cppm  Application.Impl-PathManager.cppm  Application.Impl-PlatformMessageService.cppm  Application.Impl-Process.cppm  Application.Impl-ServiceContainer.cppm  Application.Impl-ServiceManager.cppm  Application.Impl-TickableServiceInfo.cppm  Application.Impl-Windows.App.cppm  Application.Impl-Windows.AppDataManager.cppm  Application.Impl-Windows.Console.cppm  Application.Impl-Windows.DefaultLogger.cppm  Application.Impl-Windows.LoggerManager.cppm  Application.Impl-Windows.PathManager.cppm  Application.Impl-Windows.Process.cppm  Application.Impl.cppm  Main-DefaultLogger.cppm  Main-EnvironmentManager.cppm  Main-FlowManager.cppm  Main-IdentityUtility.cppm  Main-LoggerManager.cppm  (+5 more)
Engine/Application.Main/: CMakeLists.txt
Engine/Application.Main/Source/: Main.Windows.cpp  Main.cpp
Engine/Config/: CMakeLists.txt
Engine/Core/: CMakeLists.txt  README.md
Engine/Core/CMake/: Log.cmake  Target.cmake
Engine/Core/Source/: Chrono-Conversion.cppm  Chrono.cppm  Math-Ball.cppm  Math-Bounds.cppm  Math-Common.cppm  Math-Flat.cppm  Math-Intersections.cppm  Math-Matrix.cppm  Math-Transformations.cppm  Math-Vector.cppm  Math.cppm  Memory-Pool.cppm  Memory.cppm  Serialization-Array.cppm  Serialization-Basic.cppm  Type.cppm
Engine/Engine.Extension/: CMakeLists.txt
Engine/Engine.Main/: CMakeLists.txt
Engine/Engine.Main/Source/: Main.Impl.cpp  Main.cpp
Engine/File/: CMakeLists.txt
Engine/Input/: CMakeLists.txt
Engine/Input.Ext/: CMakeLists.txt
Engine/Input.Impl/: CMakeLists.txt
Engine/Input.Impl/Source/: Main.Impl.cpp  Main.cpp
Engine/Input.Keyboard.Impl/: CMakeLists.txt
Engine/Input.Keyboard.Impl/Source/: Main.Impl.cpp  Main.cpp
Engine/Job/: CMakeLists.txt
Engine/Job.Impl/: CMakeLists.txt
Engine/Job.Impl/Source/: Launch.Impl.cpp  Launch.cpp  Main-Job.cppm  Main-JobService.cppm  Main-JobServiceModule.cppm  Main-Worker.cppm  Main.cppm
Engine/Job/Source/: Main-IJob.cppm  Main-IJobService.cppm  Main-ITask.cppm  Main-JobStatus.cppm  Main.cppm
Engine/Log/: CMakeLists.txt  README.md
Engine/Log.Console/: CMakeLists.txt
Engine/Log.Console/Source/: Main.Impl.cpp  Main.cpp
Engine/Log.Ext/: CMakeLists.txt  README.md
Engine/Log.Ext/Source/: Main-SubLoggerHandle.cppm
Engine/Log.Extension/: CMakeLists.txt
Engine/Log.File/: CMakeLists.txt
Engine/Log.File.Impl/: CMakeLists.txt  README.md
Engine/Log.File.Impl/Source/: Launch.Impl.cpp  Main.Impl.cpp  Main.cpp  Main.cppm
Engine/Log.File/Source/: Main.Impl.cpp  Main.cpp
Engine/Log.Impl/: CMakeLists.txt  README.md
Engine/Log.Impl/Source/: Launch.Impl.cpp  Launch.cpp  Main-LogFiller.cppm  Main-Logger.cppm  Main-LoggerModule.cppm  Main.cppm
Engine/Log.Main/: CMakeLists.txt
Engine/Log.Main/Source/: Main.Impl.cpp  Main.cpp
Engine/Log.PConsole/: CMakeLists.txt
Engine/Log.PConsole/Source/: Main.WinCore.Impl.cpp  Main.WinCore.cpp
Engine/Log/CMake/: Log.cmake
Engine/Log/Source/: Main-ILogger.cppm
Engine/Math/: CMakeLists.txt
Engine/MessagePump/: CMakeLists.txt  README.md
Engine/MessagePump.Impl/: CMakeLists.txt  README.md
Engine/MessagePump.Impl/Source/: Main.Impl.cpp  Main.cpp
Engine/MessagePump/Source/: Main.cppm
Engine/Path.Configurator/: CMakeLists.txt
Engine/Path.Configurator/Source/: Main.Windows.Impl.cpp  Main.Windows.cpp
Engine/Path.Extension/: CMakeLists.txt
(+3834 files in other folders)
