cmake_minimum_required (VERSION 3.31)
message(STATUS "Configuring PonyEngine")

if(PROJECT_NAME)
	message(VERBOSE "Configuring as sub-project")
	set(PONY_IS_SUBPROJECT TRUE)
else()
	message(VERBOSE "Configuring as main project")
	set(PONY_IS_SUBPROJECT FALSE)
endif()

message(VERBOSE "Configuring environment")
if(NOT PONY_IS_SUBPROJECT)
	set(CMAKE_CXX_STANDARD 23)
	set(CMAKE_CXX_STANDARD_REQUIRED ON)
	set(CMAKE_CXX_EXTENSIONS OFF)
	set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "0e5b6991-d74f-4b3d-a41c-cf096e0b2508")
	set(CMAKE_CXX_MODULE_STD ON)
endif()
include(FetchContent)
set(PONY_ROOT ${CMAKE_CURRENT_LIST_DIR})
include("CMake/Path.cmake")
include("CMake/Project.cmake")

message(VERBOSE "Configuring project")
project("PonyEngine" VERSION "0.0.0.0" LANGUAGES CXX)
if(NOT PONY_IS_SUBPROJECT)
	pony_clean_build_options()
endif()

message(VERBOSE "Configuring platform: ${CMAKE_SYSTEM_NAME}")
if(DEFINED PONY_WINDOWS)
	message(FATAL_ERROR "Platform defines are preset")
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
	if(CMAKE_SYSTEM_VERSION VERSION_LESS "10.0.26100.0")
		message(FATAL_ERROR "Building with Windows SDK '${CMAKE_SYSTEM_VERSION}', but 10.0.26100.0 or newer is required")
	endif()
	if(NOT PONY_IS_SUBPROJECT)
		if(NOT CMAKE_SYSTEM_VERSION VERSION_EQUAL "10.0.26100.0")
			message(FATAL_ERROR "Building with Windows SDK '${CMAKE_SYSTEM_VERSION}', but 10.0.26100.0 is required for engine build")
		endif()
	endif()

	set(PONY_WINDOWS TRUE)

	if(PONY_IS_SUBPROJECT)
		set(PONY_WINDOWS TRUE PARENT_SCOPE)
	endif()
else()
	message(FATAL_ERROR "Unsupported platform!")
endif()

message(VERBOSE "Configuring parameters")
set(PONY_COMPANY_NAME "PonyEngine" CACHE STRING "Company name. It's used to create project folders. So, it must be a valid directory name.")
set(PONY_PROJECT_NAME "PonyEngineGame" CACHE STRING "Project name. It's used to create project folders. So, it must be a valid directory name.")
set(PONY_PROJECT_VERSION "0.0.0.0" CACHE STRING "Project version. Its format is '<number>.<number>.<number>.<number>'. 4 numbers separated with '.' are required but it may be tructated on some platforms.")
set(PONY_COMPANY_TITLE "Pony Engine" CACHE STRING "Company title. It's used in GUI only. May be any non-empty string.")
set(PONY_PROJECT_TITLE "Pony Engine Game" CACHE STRING "Project title. It's used in GUI only. May be any non-empty string.")
pony_validate_name(PONY_COMPANY_NAME)
pony_validate_name(PONY_PROJECT_NAME)
pony_validate_version(PONY_PROJECT_VERSION)
pony_validate_title(PONY_COMPANY_TITLE)
pony_validate_title(PONY_PROJECT_TITLE)

message(VERBOSE "Configuring modules")
option(PONY_ENGINE_LOG_EXT "Enable PonyEngine.Log.Ext module." OFF)
option(PONY_ENGINE_LOG_IMPL "Enable PonyEngine.Log.Impl module. It requires PonyEngine.Log.Ext." OFF)
option(PONY_ENGINE_LOG_FILE_IMPL "Enable PonyEngine.Log.File.Impl module. It requires PonyEngine.Log.Ext." OFF)
option(PONY_ENGINE_TIME "Enable PonyEngine.Time module." OFF)
option(PONY_ENGINE_TIME_IMPL "Enable PonyEngine.Time.Impl module. It requires PonyEngine.Time." OFF)
option(PONY_ENGINE_SURFACE "Enable PonyEngine.Surface module." OFF)
option(PONY_ENGINE_SURFACE_IMPL "Enable PonyEngine.Surface.Impl module. It requires PonyEngine.Surface." OFF)

add_subdirectory("Engine/Core")
add_subdirectory("Engine/Log")
add_subdirectory("Engine/Application.Ext")
add_subdirectory("Engine/Application.Impl")

if(PONY_ENGINE_LOG_EXT)
	add_subdirectory("Engine/Log.Ext")
endif()
if(PONY_ENGINE_LOG_IMPL)
	add_subdirectory("Engine/Log.Impl")
endif()
if(PONY_ENGINE_LOG_FILE_IMPL)
	add_subdirectory("Engine/Log.File.Impl")
endif()

if(PONY_ENGINE_TIME)
	add_subdirectory("Engine/Time")
endif()
if(PONY_ENGINE_TIME_IMPL)
	add_subdirectory("Engine/Time.Impl")
endif()

if(PONY_ENGINE_SURFACE)
	add_subdirectory("Engine/Surface")
endif()
if(PONY_ENGINE_SURFACE_IMPL)
	add_subdirectory("Engine/Surface.Impl")
endif()

if(PONY_ENGINE_INPUT)
	add_subdirectory("Engine/Input")
endif()

if(NOT PONY_IS_SUBPROJECT)
	set(PONY_BASE_MODULES "")
	set(PONY_DEBUG_MODULES "")
	set(PONY_GAME_MODULES "")

	message(VERBOSE "Post-configuring")
	pony_set_build_options(PonyEngine.Core ${PONY_ENGINE_OPTIMIZATION})
	pony_set_log_defines(PonyEngine.Log ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
	pony_set_build_options(PonyEngine.Log ${PONY_ENGINE_OPTIMIZATION})
	pony_set_log_defines(PonyEngine.Application.Ext ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
	pony_set_build_options(PonyEngine.Application.Ext ${PONY_ENGINE_OPTIMIZATION})
	pony_set_log_defines(PonyEngine.Application.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
	pony_set_build_options(PonyEngine.Application.Impl ${PONY_ENGINE_OPTIMIZATION})

	if(TARGET PonyEngine.Log.Ext)
		pony_set_log_defines(PonyEngine.Log.Ext ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Log.Ext ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.Log.Impl)
		pony_set_log_defines(PonyEngine.Log.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Log.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_DEBUG_MODULES PonyEngine.Log.Impl)
	endif()
	if(TARGET PonyEngine.Log.File.Impl)
		pony_set_log_defines(PonyEngine.Log.File.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Log.File.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_DEBUG_MODULES PonyEngine.Log.File.Impl)
	endif()

	if(TARGET PonyEngine.Time)
		pony_set_log_defines(PonyEngine.Time ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Time ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.Time.Impl)
		pony_set_log_defines(PonyEngine.Time.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Time.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_BASE_MODULES PonyEngine.Time.Impl)
	endif()

	if(TARGET PonyEngine.Surface)
		pony_set_log_defines(PonyEngine.Surface ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Surface ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.Surface.Impl)
		pony_set_log_defines(PonyEngine.Surface.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Surface.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_BASE_MODULES PonyEngine.Surface.Impl)
	endif()

	if(PONY_ENGINE_ADD_GAME)
		message(VERBOSE "Adding game")
		add_subdirectory("Game/${PONY_ENGINE_GAME_NAME}/GameSample")
		pony_set_log_defines(GameSample ${PONY_GAME_LOG_LEVEL} ${PONY_GAME_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(GameSample ${PONY_GAME_OPTIMIZATION})
		list(APPEND PONY_GAME_MODULES GameSample)
	endif()

	set(PONY_INSTALL_TARGETS PonyEngine.Application.Impl)
	if(PONY_MAKE_GROUPS)
		message(VERBOSE "Making application module groups")
		if(PONY_BASE_MODULES)
			pony_make_module_group(PONY_BASE_MODULES PonyEngine.Base.Group "PonyEngine.Base" 23)
			pony_set_log_defines(PonyEngine.Base.Group ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyEngine.Base.Group ${PONY_ENGINE_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyEngine.Base.Group)
			list(APPEND PONY_INSTALL_TARGETS PonyEngine.Base.Group)
		endif()

		if(PONY_DEBUG_MODULES)
			pony_make_module_group(PONY_DEBUG_MODULES PonyEngine.Debug.Group "PonyEngine.Debug" 23)
			pony_set_log_defines(PonyEngine.Debug.Group ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyEngine.Debug.Group ${PONY_ENGINE_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyEngine.Debug.Group)
			list(APPEND PONY_INSTALL_TARGETS PonyEngine.Debug.Group)
		endif()

		if(PONY_GAME_MODULES)
			pony_make_module_group(PONY_GAME_MODULES PonyEngine.Game.Group "PonyEngine.Game" 23)
			pony_set_log_defines(PonyEngine.Game.Group ${PONY_GAME_LOG_LEVEL} ${PONY_GAME_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyEngine.Game.Group ${PONY_GAME_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyEngine.Game.Group)
			list(APPEND PONY_INSTALL_TARGETS PonyEngine.Game.Group)
		endif()
	else()
		message(VERBOSE "Adding application modules")
		target_link_libraries(PonyEngine.Application.Impl PRIVATE 
			${PONY_BASE_MODULES}
			${PONY_DEBUG_MODULES}
			${PONY_GAME_MODULES}
		)
	endif()

	message(VERBOSE "Installing")
	install(TARGETS ${PONY_INSTALL_TARGETS}
		RUNTIME DESTINATION .
		LIBRARY DESTINATION
	)

	if(PONY_ENGINE_TESTING)
		message(STATUS "Configuring test project")
		add_subdirectory("Tests")
	endif()
endif()
