cmake_minimum_required (VERSION 3.31)
message(STATUS "Configuring PonyEngine")

if(PROJECT_NAME)
	message(VERBOSE "Configuring as sub-project")
	set(PONY_IS_SUBPROJECT TRUE)
else()
	message(VERBOSE "Configuring as main project")
	set(PONY_IS_SUBPROJECT FALSE)
endif()

message(VERBOSE "Configuring environment")
if(NOT PONY_IS_SUBPROJECT)
	set(CMAKE_CXX_STANDARD 23)
	set(CMAKE_CXX_STANDARD_REQUIRED ON)
	set(CMAKE_CXX_EXTENSIONS OFF)
	set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "0e5b6991-d74f-4b3d-a41c-cf096e0b2508")
	set(CMAKE_CXX_MODULE_STD ON)
endif()
include(FetchContent)
set(PONY_ENGINE_ROOT ${CMAKE_CURRENT_LIST_DIR})
include("CMake/Path.cmake")
include("CMake/Project.cmake")
include("CMake/Shader.cmake")

set(PONY_ENGINE_NAME "PonyEngine")

set(PONY_ENGINE_VERSION_MAJOR "0")
set(PONY_ENGINE_VERSION_MINOR "1")
set(PONY_ENGINE_VERSION_PATCH "0")
set(PONY_ENGINE_VERSION_TWEAK "0")
set(PONY_ENGINE_VERSION "${PONY_ENGINE_VERSION_MAJOR}.${PONY_ENGINE_VERSION_MINOR}.${PONY_ENGINE_VERSION_PATCH}.${PONY_ENGINE_VERSION_TWEAK}")
set(PONY_ENGINE_TITLE "Pony Engine")

if(PONY_IS_SUBPROJECT)
	set(PONY_ENGINE_NAME ${PONY_ENGINE_NAME} PARENT_SCOPE)
	set(PONY_ENGINE_VERSION_MAJOR ${PONY_ENGINE_VERSION_MAJOR} PARENT_SCOPE)
	set(PONY_ENGINE_VERSION_MINOR ${PONY_ENGINE_VERSION_MINOR} PARENT_SCOPE)
	set(PONY_ENGINE_VERSION_PATCH ${PONY_ENGINE_VERSION_PATCH} PARENT_SCOPE)
	set(PONY_ENGINE_VERSION_TWEAK ${PONY_ENGINE_VERSION_TWEAK} PARENT_SCOPE)
	set(PONY_ENGINE_VERSION ${PONY_ENGINE_VERSION} PARENT_SCOPE)
	set(PONY_ENGINE_TITLE ${PONY_ENGINE_TITLE} PARENT_SCOPE)
endif()

message(VERBOSE "Configuring project")
project(${PONY_ENGINE_NAME} VERSION ${PONY_ENGINE_VERSION} LANGUAGES CXX)
if(NOT PONY_IS_SUBPROJECT)
	pony_clean_build_options()
endif()

message(VERBOSE "Configuring parameters")
set(PONY_COMPANY_NAME "PonyEngine" CACHE STRING "Company name. It's used to create project folders. So, it must be a valid directory name.")
set(PONY_PROJECT_NAME "PonyEngineGame" CACHE STRING "Project name. It's used to create project folders. So, it must be a valid directory name. It's also used for an executable name.")
set(PONY_PROJECT_VERSION_MAJOR "0" CACHE STRING "Project major version.")
set(PONY_PROJECT_VERSION_MINOR "0" CACHE STRING "Project minor version.")
set(PONY_PROJECT_VERSION_PATCH "0" CACHE STRING "Project patch version.")
set(PONY_PROJECT_VERSION_TWEAK "0" CACHE STRING "Project tweak version.")
set(PONY_COMPANY_TITLE "Pony Engine" CACHE STRING "Company title. It's used in GUI only. May be any non-empty string.")
set(PONY_PROJECT_TITLE "Pony Engine Game" CACHE STRING "Project title. It's used in GUI only. May be any non-empty string.")
set(PONY_PROJECT_VERSION "${PONY_PROJECT_VERSION_MAJOR}.${PONY_PROJECT_VERSION_MINOR}.${PONY_PROJECT_VERSION_PATCH}.${PONY_PROJECT_VERSION_TWEAK}")
set(PONY_APP_ICON_MODE "Default" CACHE STRING "Application icon mode. Must be CMake false constant, Default or Custom.")
pony_validate_name(PONY_COMPANY_NAME)
pony_validate_name(PONY_PROJECT_NAME)
pony_validate_version(PONY_PROJECT_VERSION)
pony_validate_title(PONY_COMPANY_TITLE)
pony_validate_title(PONY_PROJECT_TITLE)
if(PONY_APP_ICON_MODE)
	if(NOT PONY_APP_ICON_MODE STREQUAL "Default" AND NOT PONY_APP_ICON_MODE STREQUAL "Custom")
		message(FATAL_ERROR "Incorrect PONY_APP_ICON_MODE: ${PONY_APP_ICON_MODE}")
	endif()
endif()

message(VERBOSE "Configuring modules")
option(PONY_ENGINE_TIME "Enable PonyEngine.Time module." OFF)
option(PONY_ENGINE_TIME_IMPL "Enable PonyEngine.Time.Impl module." OFF)
option(PONY_ENGINE_LOG_EXT "Enable PonyEngine.Log.Ext module." OFF)
option(PONY_ENGINE_LOG_IMPL "Enable PonyEngine.Log.Impl module." OFF)
option(PONY_ENGINE_LOG_FILE_IMPL "Enable PonyEngine.Log.File.Impl module." OFF)
option(PONY_ENGINE_MESSAGE_PUMP "Enable PonyEngine.MessagePump module." OFF)
option(PONY_ENGINE_MESSAGE_PUMP_IMPL "Enable PonyEngine.MessagePump.Impl module." OFF)
option(PONY_ENGINE_SURFACE "Enable PonyEngine.Surface module." OFF)
option(PONY_ENGINE_SURFACE_IMPL "Enable PonyEngine.Surface.Impl module." OFF)
option(PONY_ENGINE_RAW_INPUT "Enable PonyEngine.RawInput module." OFF)
option(PONY_ENGINE_RAW_INPUT_EXT "Enable PonyEngine.RawInput.Ext module." OFF)
option(PONY_ENGINE_RAW_INPUT_IMPL "Enable PonyEngine.RawInput.Impl module." OFF)
option(PONY_ENGINE_RAW_INPUT_KEYBOARD_IMPL "Enable PonyEngine.RawInput.Keyboard.Impl module." OFF)
option(PONY_ENGINE_RAW_INPUT_MOUSE_IMPL "Enable PonyEngine.RawInput.Mouse.Impl module." OFF)
option(PONY_ENGINE_RAW_INPUT_XINPUT_IMPL "Enable PonyEngine.RawInput.XInput.Impl module." OFF)
option(PONY_ENGINE_RENDER_DEVICE "Enable PonyEngine.RenderDevice module." OFF)
option(PONY_ENGINE_RENDER_DEVICE_EXT "Enable PonyEngine.RenderDevice.Ext module." OFF)
option(PONY_ENGINE_RENDER_DEVICE_IMPL "Enable PonyEngine.RenderDevice.Impl module." OFF)
option(PONY_ENGINE_RENDER_DEVICE_DIRECT3D12_IMPL "Enable PonyEngine.RenderDevice.Direct3D12.Impl module." OFF)
option(PONY_ENGINE_SHADER "Enable PonyEngine.Shader module" OFF)

option(PONY_ENGINE_CUSTOM_PLATFORM "If OFF, the engine automatically detects and configures supported platforms. If ON, the engine skips platform detection and a custom platform configuration must be provided." OFF)
option(PONY_ENGINE_CUSTOM_COMPILER "If OFF, the engine automatically detects and configures supported compilers. If ON, the engine skips compiler detection and a custom compiler configuration must be provided." OFF)

add_subdirectory("Engine/Core")
add_subdirectory("Engine/Log")
add_subdirectory("Engine/Application.Ext")
add_subdirectory("Engine/Application.Impl")

if(PONY_ENGINE_TIME)
	add_subdirectory("Engine/Time")
endif()
if(PONY_ENGINE_TIME_IMPL)
	add_subdirectory("Engine/Time.Impl")
endif()

if(PONY_ENGINE_LOG_EXT)
	add_subdirectory("Engine/Log.Ext")
endif()
if(PONY_ENGINE_LOG_IMPL)
	add_subdirectory("Engine/Log.Impl")
endif()
if(PONY_ENGINE_LOG_FILE_IMPL)
	add_subdirectory("Engine/Log.File.Impl")
endif()

if(PONY_ENGINE_MESSAGE_PUMP)
	add_subdirectory("Engine/MessagePump")
endif()
if(PONY_ENGINE_MESSAGE_PUMP_IMPL)
	add_subdirectory("Engine/MessagePump.Impl")
endif()

if(PONY_ENGINE_SURFACE)
	add_subdirectory("Engine/Surface")
endif()
if(PONY_ENGINE_SURFACE_IMPL)
	add_subdirectory("Engine/Surface.Impl")
endif()

if(PONY_ENGINE_RAW_INPUT)
	add_subdirectory("Engine/RawInput")
endif()
if(PONY_ENGINE_RAW_INPUT_EXT)
	add_subdirectory("Engine/RawInput.Ext")
endif()
if(PONY_ENGINE_RAW_INPUT_IMPL)
	add_subdirectory("Engine/RawInput.Impl")
endif()
if(PONY_ENGINE_RAW_INPUT_KEYBOARD_IMPL)
	add_subdirectory("Engine/RawInput.Keyboard.Impl")
endif()
if(PONY_ENGINE_RAW_INPUT_MOUSE_IMPL)
	add_subdirectory("Engine/RawInput.Mouse.Impl")
endif()
if(PONY_ENGINE_RAW_INPUT_XINPUT_IMPL)
	add_subdirectory("Engine/RawInput.XINPUT.Impl")
endif()

if(PONY_ENGINE_RENDER_DEVICE)
	add_subdirectory("Engine/RenderDevice")
endif()
if(PONY_ENGINE_RENDER_DEVICE_EXT)
	add_subdirectory("Engine/RenderDevice.Ext")
endif()
if(PONY_ENGINE_RENDER_DEVICE_IMPL)
	add_subdirectory("Engine/RenderDevice.Impl")
endif()
if(PONY_ENGINE_RENDER_DEVICE_DIRECT3D12_IMPL)
	add_subdirectory("Engine/RenderDevice.Direct3D12.Impl")
endif()

if(PONY_ENGINE_SHADER)
	add_subdirectory("Engine/Shader")
endif()

if(NOT PONY_ENGINE_CUSTOM_PLATFORM)
	add_subdirectory("Platform")
endif()
if(NOT PONY_ENGINE_CUSTOM_COMPILER)
	add_subdirectory("Compiler")
endif()

if(NOT PONY_IS_SUBPROJECT)
	set(PONY_BASE_MODULES "")
	set(PONY_LOG_MODULES "")
	set(PONY_PLATFORM_MODULES "")
	set(PONY_INPUT_MODULES "")
	set(PONY_RENDER_MODULES "")

	message(VERBOSE "Post-configuring")
	pony_set_build_options(PonyEngine.Core ${PONY_ENGINE_OPTIMIZATION})
	pony_set_log_defines(PonyEngine.Log ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
	pony_set_build_options(PonyEngine.Log ${PONY_ENGINE_OPTIMIZATION})
	pony_set_log_defines(PonyEngine.Application.Ext ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
	pony_set_build_options(PonyEngine.Application.Ext ${PONY_ENGINE_OPTIMIZATION})
	pony_set_log_defines(PonyEngine.Application.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
	pony_set_build_options(PonyEngine.Application.Impl ${PONY_ENGINE_OPTIMIZATION})

	if(TARGET PonyEngine.Time)
		pony_set_log_defines(PonyEngine.Time ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Time ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.Time.Impl)
		pony_set_log_defines(PonyEngine.Time.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Time.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_BASE_MODULES PonyEngine.Time.Impl)
	endif()

	if(TARGET PonyEngine.Log.Ext)
		pony_set_log_defines(PonyEngine.Log.Ext ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Log.Ext ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.Log.Impl)
		pony_set_log_defines(PonyEngine.Log.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Log.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_LOG_MODULES PonyEngine.Log.Impl)
	endif()
	if(TARGET PonyEngine.Log.File.Impl)
		pony_set_log_defines(PonyEngine.Log.File.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Log.File.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_LOG_MODULES PonyEngine.Log.File.Impl)
	endif()

	if(TARGET PonyEngine.MessagePump)
		pony_set_log_defines(PonyEngine.MessagePump ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.MessagePump ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.MessagePump.Impl)
		pony_set_log_defines(PonyEngine.MessagePump.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.MessagePump.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_PLATFORM_MODULES PonyEngine.MessagePump.Impl)
	endif()

	if(TARGET PonyEngine.Surface)
		pony_set_log_defines(PonyEngine.Surface ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Surface ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.Surface.Impl)
		pony_set_log_defines(PonyEngine.Surface.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Surface.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_PLATFORM_MODULES PonyEngine.Surface.Impl)
	endif()

	if(TARGET PonyEngine.RawInput)
		pony_set_log_defines(PonyEngine.RawInput ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RawInput ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.RawInput.Ext)
		pony_set_log_defines(PonyEngine.RawInput.Ext ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RawInput.Ext ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.RawInput.Impl)
		pony_set_log_defines(PonyEngine.RawInput.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RawInput.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_INPUT_MODULES PonyEngine.RawInput.Impl)
	endif()
	if(TARGET PonyEngine.RawInput.Keyboard.Impl)
		pony_set_log_defines(PonyEngine.RawInput.Keyboard.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RawInput.Keyboard.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_INPUT_MODULES PonyEngine.RawInput.Keyboard.Impl)
	endif()
	if(TARGET PonyEngine.RawInput.Mouse.Impl)
		pony_set_log_defines(PonyEngine.RawInput.Mouse.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RawInput.Mouse.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_INPUT_MODULES PonyEngine.RawInput.Mouse.Impl)
	endif()
	if(TARGET PonyEngine.RawInput.XInput.Impl)
		pony_set_log_defines(PonyEngine.RawInput.XInput.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RawInput.XInput.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_INPUT_MODULES PonyEngine.RawInput.XInput.Impl)
	endif()

	if(TARGET PonyEngine.RenderDevice)
		pony_set_log_defines(PonyEngine.RenderDevice ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RenderDevice ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.RenderDevice.Ext)
		pony_set_log_defines(PonyEngine.RenderDevice.Ext ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RenderDevice.Ext ${PONY_ENGINE_OPTIMIZATION})
	endif()
	if(TARGET PonyEngine.RenderDevice.Impl)
		pony_set_log_defines(PonyEngine.RenderDevice.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RenderDevice.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_RENDER_MODULES PonyEngine.RenderDevice.Impl)
	endif()
		if(TARGET PonyEngine.RenderDevice.Direct3D12.Impl)
		pony_set_log_defines(PonyEngine.RenderDevice.Direct3D12.Impl ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.RenderDevice.Direct3D12.Impl ${PONY_ENGINE_OPTIMIZATION})
		list(APPEND PONY_RENDER_MODULES PonyEngine.RenderDevice.Direct3D12.Impl)
	endif()

	if(TARGET PonyEngine.Shader)
		pony_set_log_defines(PonyEngine.Shader ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(PonyEngine.Shader ${PONY_ENGINE_OPTIMIZATION})
	endif()

	if(PONY_ENGINE_ADD_GAME)
		message(VERBOSE "Adding game")
		add_subdirectory("Game/${PONY_ENGINE_GAME_NAME}/GameSample")
		pony_set_log_defines(GameSample ${PONY_GAME_LOG_LEVEL} ${PONY_GAME_LOG_STACKTRACE_LEVEL})
		pony_set_build_options(GameSample ${PONY_GAME_OPTIMIZATION})
		list(APPEND PONY_GAME_MODULES GameSample)
	endif()

	set(PONY_INSTALL_TARGETS PonyEngine.Application.Impl)
	if(PONY_MAKE_GROUPS)
		message(VERBOSE "Making application module groups")
		if(PONY_BASE_MODULES)
			pony_make_module_group(PONY_BASE_MODULES PonyModule.Base "PonyModule.Base" 23)
			pony_set_log_defines(PonyModule.Base ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyModule.Base ${PONY_ENGINE_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyModule.Base)
			list(APPEND PONY_INSTALL_TARGETS PonyModule.Base)
		endif()

		if(PONY_LOG_MODULES)
			pony_make_module_group(PONY_LOG_MODULES PonyModule.Log "PonyModule.Log" 23)
			pony_set_log_defines(PonyModule.Log ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyModule.Log ${PONY_ENGINE_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyModule.Log)
			list(APPEND PONY_INSTALL_TARGETS PonyModule.Log)
		endif()

		if(PONY_PLATFORM_MODULES)
			pony_make_module_group(PONY_PLATFORM_MODULES PonyModule.Platform "PonyModule.Platform" 23)
			pony_set_log_defines(PonyModule.Platform ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyModule.Platform ${PONY_ENGINE_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyModule.Platform)
			list(APPEND PONY_INSTALL_TARGETS PonyModule.Platform)
		endif()

		if(PONY_INPUT_MODULES)
			pony_make_module_group(PONY_INPUT_MODULES PonyModule.Input "PonyModule.Input" 23)
			pony_set_log_defines(PonyModule.Input ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyModule.Input ${PONY_ENGINE_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyModule.Input)
			list(APPEND PONY_INSTALL_TARGETS PonyModule.Input)
		endif()

		if(PONY_RENDER_MODULES)
			pony_make_module_group(PONY_RENDER_MODULES PonyModule.Render "PonyModule.Render" 23)
			pony_set_log_defines(PonyModule.Render ${PONY_ENGINE_LOG_LEVEL} ${PONY_ENGINE_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyModule.Render ${PONY_ENGINE_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyModule.Render)
			list(APPEND PONY_INSTALL_TARGETS PonyModule.Render)
		endif()

		if(PONY_GAME_MODULES)
			pony_make_module_group(PONY_GAME_MODULES PonyModule.Game "PonyModule.Game" 23)
			pony_set_log_defines(PonyModule.Game ${PONY_GAME_LOG_LEVEL} ${PONY_GAME_LOG_STACKTRACE_LEVEL})
			pony_set_build_options(PonyModule.Game ${PONY_GAME_OPTIMIZATION})
			target_link_libraries(PonyEngine.Application.Impl PRIVATE PonyModule.Game)
			list(APPEND PONY_INSTALL_TARGETS PonyModule.Game)
		endif()
	else()
		message(VERBOSE "Adding application modules")
		target_link_libraries(PonyEngine.Application.Impl PRIVATE
			${PONY_BASE_MODULES}
			${PONY_LOG_MODULES}
			${PONY_PLATFORM_MODULES}
			${PONY_INPUT_MODULES}
			${PONY_GAME_MODULES}
			${PONY_RENDER_MODULES}
		)
	endif()

	message(VERBOSE "Installing")
	install(TARGETS ${PONY_INSTALL_TARGETS}
		RUNTIME DESTINATION .
		LIBRARY DESTINATION
	)

	if(PONY_ENGINE_TESTING)
		message(STATUS "Configuring test project")
		add_subdirectory("Tests")
	endif()
endif()
